[tool.poetry]
name = "ai-hedge-fund"
version = "0.1.0"
description = "An AI-powered hedge fund simulation using multiple specialized agents"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.0"
langchain-openai = "^0.1.0"
langchain-anthropic = "^0.1.0"
langgraph = "^0.1.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
yfinance = "^0.2.40"
finnhub-python = "^2.4.20"
tavily-python = "^0.3.0"
rich = "^13.7.0"
typer = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.4.0"
mypy = "^1.10.0"

[tool.poetry.scripts]
hedge-fund = "src.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
